# lsqXtFemParabolic

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  doxygen.conf
.github/workflows/: main.yml
cmake/: GetGTest_euler.cmake  GetPardiso_euler.cmake  GetPardiso_local.cmake
config_files/unit_tests/: heat_periodic_square_test1.json  heat_periodic_square_test1_FG.json  heat_square_test1.json  heat_unitSquare_test1.json  sparseHeat_square_test1.json
docs/: annotated.html  assembly_8cpp.html  assembly_8cpp__incl.map  assembly_8cpp__incl.md5  assembly_8cpp_source.html  assembly_8hpp.html  assembly_8hpp_source.html  base__observer_8cpp.html  base__observer_8cpp__incl.map  base__observer_8cpp__incl.md5  base__observer_8cpp_source.html  base__observer_8hpp.html  base__observer_8hpp__dep__incl.map  base__observer_8hpp__dep__incl.md5  base__observer_8hpp_source.html  classPardisoSolver.html  classes.html  classheat_1_1BdryTemperatureCoeff-members.html  classheat_1_1BdryTemperatureCoeff.html  classheat_1_1BdryTemperatureCoeff__coll__graph.map  classheat_1_1BdryTemperatureCoeff__coll__graph.md5  classheat_1_1ExactHeatFluxCoeff-members.html  classheat_1_1ExactHeatFluxCoeff.html  classheat_1_1ExactHeatFluxCoeff__coll__graph.map  classheat_1_1ExactHeatFluxCoeff__coll__graph.md5  classheat_1_1ExactHeatFluxCoeff__inherit__graph.md5  classheat_1_1ExactTemperatureCoeff-members.html  classheat_1_1ExactTemperatureCoeff.html  classheat_1_1ExactTemperatureCoeff__coll__graph.md5  classheat_1_1ExactTemperatureSpatialGradCoeff-members.html  classheat_1_1ExactTemperatureSpatialGradCoeff.html  classheat_1_1ExactTemperatureSpatialGradCoeff__coll__graph.map  classheat_1_1ExactTemperatureSpatialGradCoeff__coll__graph.md5  classheat_1_1ExactTemperatureSpatialGradCoeff__inherit__graph.md5  classheat_1_1ExactTemperatureTemporalGradCoeff-members.html  classheat_1_1ExactTemperatureTemporalGradCoeff.html  classheat_1_1ExactTemperatureTemporalGradCoeff__inherit__graph.map  classheat_1_1ExactTemperatureTemporalGradCoeff__inherit__graph.md5  classheat_1_1ExactTemperatureTimeGradCoeff__coll__graph.map  classheat_1_1ExactTemperatureTimeGradCoeff__inherit__graph.md5  (+683 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  (+45 more)
documentation/: doxyFile
documentation/docs/: annotated.html  assembly_8cpp_source.html  base__observer_8cpp__incl.md5  classes.html  classheat_1_1BdryTemperatureCoeff-members.html  classheat_1_1ExactTemperatureCoeff.html  classheat_1_1GradientIntegrator-members.html  classheat_1_1GradientIntegrator.html  classheat_1_1InitialTemperatureCoeff-members.html  classheat_1_1InitialTemperatureCoeff__coll__graph.md5  classheat_1_1LsqXtFemH1Hdiv.html  classheat_1_1MediumScalarCoeff.html  classheat_1_1MediumScalarCoeff__inherit__graph.map  classheat_1_1MediumTensorCoeff__coll__graph.map  classheat_1_1Observer__inherit__graph.map  classheat_1_1QoIFunctional-members.html  classheat_1_1QoIFunctional.html  classheat_1_1QoIXtFunctional.html  classheat_1_1SourceCoeff-members.html  classheat_1_1SourceCoeff__inherit__graph.md5  classheat_1_1TestCase_3_01LShapedTest1_01_4__inherit__graph.md5  classheat_1_1TestCase_3_01PeriodicUnitSquareTest1_01_4.html  classheat_1_1TestCase_3_01PeriodicUnitSquareTest1_01_4__coll__graph.map  classheat_1_1TestCase_3_01UnitSquareTest2_01_4.html  classheat_1_1TestCase_3_01UnitSquareTest3_01_4-members.html  classheat_1_1VectorDivergenceLFIntegrator-members.html  classheat_1_1VectorDivergenceLFIntegrator.html  classheat_1_1VectorDivergenceLFIntegrator__inherit__graph.map  classheat_1_1VectorFEDivergenceLFIntegrator__inherit__graph.map  classheat_1_1VectorFEDivergenceLFIntegrator__inherit__graph.md5  classheat_1_1VectorFEGradientIntegrator-members.html  classheat_1_1VectorStiffnessIntegrator-members.html  classheat_1_1VectorStiffnessIntegrator__coll__graph.md5  classmymfem_1_1BaseObserver-members.html  classmymfem_1_1BaseObserver.html  classmymfem_1_1BaseObserver__inherit__graph.md5  coefficients_8hpp__dep__incl.map  config_8cpp.html  config_8cpp__incl.map  config_8cpp_source.html  (+50 more)
documentation/html/: assembly_8cpp.html  assembly_8cpp__incl.map  assembly_8cpp__incl.md5  assembly_8hpp__dep__incl.map  assembly_8hpp__dep__incl.md5  assembly_8hpp__incl.map  assembly_8hpp_source.html  base__observer_8cpp.html  base__observer_8cpp__incl.map  base__observer_8cpp_source.html  base__observer_8hpp.html  base__observer_8hpp__dep__incl.map  base__observer_8hpp__dep__incl.md5  base__observer_8hpp__incl.map  base__observer_8hpp__incl.md5  classBaseObserver-members.html  classBaseObserver.html  classBaseObserver__inherit__graph.map  classBaseObserver__inherit__graph.md5  classComputeH1Error-members.html  classComputeH1Error.html  classHeatBdryTemperatureCoeff-members.html  classHeatBdryTemperatureCoeff.html  classHeatBdryTemperatureCoeff__inherit__graph.map  classHeatBdryTemperatureCoeff__inherit__graph.md5  classHeatExactFluxCoeff-members.html  (+369 more)
src/: CMakeLists.txt  heat.cpp  includes.hpp  sparse_heat.cpp
tests/: CMakeLists.txt  test_functionals.cpp  test_mesh_hierarchy.cpp  test_mesh_point_locator.cpp  test_my_bilinear_forms.cpp  test_nested_hierarchy.cpp  test_pardiso.cpp  test_sparse_assembly.cpp  test_sparse_discretisation.cpp  test_sparse_heat_discretisation.cpp  test_sparse_heat_error_evaluator.cpp  test_sparse_heat_solution_handler.cpp  test_sparse_heat_solver.cpp  test_sparse_heat_spatial_assembly.cpp  test_sparse_heat_spatial_assembly_H1H1.cpp  test_sparse_heat_spatial_assembly_H1Hdiv.cpp  test_sparse_solution_handler.cpp  test_sparse_solver.cpp  test_sparse_spatial_assembly.cpp  test_sparse_temporal_assembly.cpp  test_utilities.cpp  unit_tests.cpp
(+483 files in other folders)
